# dar-to-oar

./: .gitignore  .prettierrc.js  CHANGELOG.md  Cargo.toml  README.md  biome.jsonc  cspell.jsonc  jest.config.mjs  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  vite.config.ts  vitest.config.ts
cli/: Cargo.toml  build.rs
cli/src/: error.rs  logger.rs  main.rs
cli/src/cli/: color.rs  convert.rs  mod.rs
core/: Cargo.toml  readme.md
core/benches/: convert_n_thread.rs
core/src/: error.rs  lib.rs
core/src/condition_parser/: actor.rs  compare.rs  conditions.rs  dar_interface.rs  equip.rs  errors.rs  faction.rs  has.rs  macros.rs  mod.rs
core/src/conditions/: and.rs  compare_values.rs  condition.rs  condition_config.rs  current_weather.rs  errors.rs  faction_rank.rs  has_keyword.rs  has_magic_effect.rs  has_magic_effect_with_keyword.rs  has_perk.rs  has_ref_type.rs  is_equipped.rs  is_equipped_has_keyword.rs  is_equipped_type.rs  is_movement_direction.rs  is_worn_has_keyword.rs  mod.rs  or.rs  random.rs
core/src/dar_syntax/: float.rs  mod.rs
core/src/dar_syntax/ast/: condition.rs  expression.rs  fn_arg.rs  fn_args.rs  mod.rs  number_literal.rs  op.rs
core/src/dar_syntax/errors/: mod.rs  readable_error.rs
core/src/dar_syntax/parser/: comment.rs  condition.rs  expression.rs  mod.rs  op.rs
core/src/fs/: mapping_table.rs  path_changer.rs  section_writer.rs
core/src/fs/converter/: common.rs  mod.rs  parallel.rs  support_cmd.rs
core/src/values/: actor_value.rs  direction_value.rs  errors.rs  form_value.rs  graph_value.rs  keyword_value.rs  literal_value.rs  mod.rs  numeric_literal.rs  numeric_value.rs  plugin_value.rs  random_value.rs  type_value.rs
crates/dar2oar_core/: Cargo.toml  readme.md
crates/dar2oar_core/benches/: convert_n_thread.rs
crates/dar2oar_core/src/: error.rs  lib.rs  parser.rs
crates/dar2oar_core/src/fs/: mapping_table.rs  mod.rs  path_changer.rs  section_writer.rs
crates/dar_syntax/: Cargo.toml
crates/dar_syntax/src/: ast.rs  lib.rs
crates/dar_syntax/src/parser/: comment.rs  condition.rs  expression.rs  mod.rs  op.rs
crates/mapping_table/: Cargo.toml
crates/mapping_table/src/: lib.rs
crates/mapping_table/src/builder/: build.rs  error.rs  mod.rs  parser.rs  strategy.rs
crates/mapping_table/src/reader/: mod.rs
crates/oar_conditions/: Cargo.toml
crates/oar_conditions/src/: cast.rs  error.rs  lib.rs
crates/oar_conditions/src/conditions/: and.rs  compare_values.rs  condition_config.rs  current_weather.rs  faction_rank.rs  has_keyword.rs  has_magic_effect.rs  has_magic_effect_with_keyword.rs  has_perk.rs  has_ref_type.rs  is_equipped.rs  is_equipped_has_keyword.rs  is_equipped_type.rs  is_movement_direction.rs  is_worn_has_keyword.rs  mod.rs  namespace_config.rs  or.rs  random.rs
crates/oar_values/: Cargo.toml
crates/oar_values/src/: actor_value.rs  direction_value.rs  graph_value.rs  keyword_value.rs  lib.rs  numeric_literal.rs  numeric_value.rs  plugin_value.rs  static_value.rs  type_value.rs
crates/tracing_rotation/: Cargo.toml
crates/tracing_rotation/src/: error.rs  lib.rs
dar2oar_cli/: Cargo.toml
dar2oar_cli/src/: convert.rs  lib.rs  logger.rs  main.rs
dar2oar_cli/src/cli/: commands.rs  convert.rs  mod.rs
dar2oar_core/: Cargo.toml  readme.md
dar2oar_core/benches/: convert_n_thread.rs
dar2oar_core/src/: error.rs  lib.rs  test_helper.rs
dar2oar_core/src/condition_parser/: actor.rs  compare.rs  conditions.rs  dar_interface.rs  equip.rs  faction.rs  has.rs  macros.rs  mod.rs
dar2oar_core/src/conditions/: and.rs  compare_values.rs  condition.rs  condition_config.rs  current_weather.rs  faction_rank.rs  has_keyword.rs  has_magic_effect.rs  has_magic_effect_with_keyword.rs  has_perk.rs  has_ref_type.rs  is_equipped.rs  is_equipped_has_keyword.rs  is_equipped_type.rs  is_movement_direction.rs  is_worn_has_keyword.rs  mod.rs  namespace_config.rs  or.rs  random.rs
dar2oar_core/src/dar_syntax/: error.rs  float.rs  mod.rs  readme.md  syntax.rs
dar2oar_core/src/fs/: async_closure.rs  mapping_table.rs  mod.rs  parallel.rs  path_changer.rs  section_writer.rs  sequential.rs
dar2oar_core/src/fs/converter/: common.rs  mod.rs  parallel.rs  sequential.rs  support_cmd.rs
dar2oar_core/src/fs/parallel/: mod.rs
dar2oar_core/src/fs/sequential/: mod.rs
dar2oar_core/src/values/: actor_value.rs  comparison.rs  direction_value.rs  form_value.rs  graph_value.rs  keyword_value.rs  literal_value.rs  mod.rs  numeric_literal.rs  numeric_value.rs  plugin_value.rs  static_value.rs  type_value.rs
dar2oar_gui/backend/: Cargo.toml  tauri.conf.json
dar2oar_gui/backend/src/: cmd.rs  logging.rs  runner.rs
gui/backend/: Cargo.toml  readme.md  tauri.conf.json
gui/backend/capabilities/: main.json
gui/backend/icons/: icon.icns
gui/backend/src/: cmd.rs  convert_option.rs  error.rs  log.rs  logging.rs  main.rs  runner.rs
gui/backend/src/cli/: error.rs  handler.rs  mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  cmd.rs  convert_option.rs  logging.rs  main.rs  runner.rs  tauri_cmd.rs
src-tauri/src/converter/: conditions.rs  dar_interface.rs  dar_syntax.rs  error.rs  mod.rs  parser.rs  values.rs  write_file.rs
src-tauri/src/converter/condition_parser/: actor.rs  compare.rs  conditions.rs  dar_interface.rs  equip.rs  faction.rs  has.rs  macros.rs  mod.rs
src-tauri/src/converter/conditions/: and.rs  compare_values.rs  condition.rs  current_game_time.rs  current_weather.rs  faction_rank.rs  has_keyword.rs  has_magic_effect.rs  has_magic_effect_with_keyword.rs  has_perk.rs  has_ref_type.rs  is_equipped.rs  is_equipped_has_keyword.rs  is_equipped_type.rs  is_movement_direction.rs  is_worn_has_keyword.rs  level.rs  mod.rs  or.rs  random.rs
src-tauri/src/converter/dar_syntax/: mod.rs  readme.md  syntax.rs
src-tauri/src/converter/fs/: constants.rs  mapping_table.rs  mod.rs  old.rs  visiter.rs  write.rs
src-tauri/src/converter/values/: actor_value.rs  comparison.rs  direction_value.rs  graph_value.rs  keyword_value.rs  mod.rs  (+7 more)
src-tauri/src/tauri/: cmd.rs  mod.rs  runner.rs
(+354 files in other folders)
