[package]
name = "dar2oar_cli"
version.workspace = true
description = "DAR to OAR Converter CLI"
authors.workspace = true
categories.workspace = true
keywords = ["converter", "skyrim", "cli"]
readme = "./readme.md"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dar2oar"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
winres = "0.1.12" # Meta information can be added to the exe.

[dependencies]
clap = { version = "4.5.41", features = ["derive"] } # For CLI
dar2oar_core = { workspace = true, features = ["tracing"] }
snafu = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tracing = { workspace = true } # Logger
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }


[features]
default = ["color"]
color = []

[lints]
workspace = true
