[package]
name = "dar2oar_core"
version.workspace = true
description = "DAR to OAR Converter Core"
authors.workspace = true
categories.workspace = true
keywords = ["converter", "skyrim"]
readme = "./readme.md"
license.workspace = true
repository.workspace = true
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# default = ["tracing"] # For debug
tracing = ["dep:tracing"]

[dependencies]
annotate-snippets = "0.11.5" # Error reporting display
async-walkdir = "2.1.0" # To traverse dir recursivly(Single thiread)
compact_str = { version = "0.8.1", features = ["serde"] }
jwalk = "0.8.1" # To parallel traverse dir recursivly
serde = { workspace = true } # Implement (De)Serializer
serde-untagged = "0.1.6"
serde_json = { workspace = true } # Json converter
snafu = { workspace = true } # define errors type
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
] } # Async Executor
tokio-stream = "0.1.17" # Async next() method
tracing = { workspace = true, optional = true } # Logger
winnow = "0.7.1" # Parser combinator

[dev-dependencies]
criterion = { version = "0.5.1", features = [
  "async_futures",
  "async_tokio",
  "html_reports",
] }
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true, features = ["derive"] }
temp-dir = { workspace = true }

[[bench]]
name = "convert_n_thread"
harness = false
