[package]
name = "dar2oar_cli"
version.workspace = true
description = "DAR to OAR Converter CLI"
authors = ["SARDONYX-sard"]
categories.workspace = true
keywords = ["converter", "skyrim", "cli"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "dar2oar"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["derive"] } # For CLI
dar2oar_core = { path = "../dar2oar_core", features = ["tracing"] }
tokio = { version = "1.37.0", features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1.40" # Logger
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = ["color"]
color = []
