[package]
name = "dar2oar_core"
version.workspace = true
description = "DAR to OAR Converter Core"
authors = ["SARDONYX-sard"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SARDONYX-sard/dar2oar"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-walkdir = "0.2.0" # To traverse dir recursivly(Single thiread)
jwalk = "0.8.1" # To parallel traverse dir recursivly
nom = { version = "7.1.3", features = ["alloc"] } # Syntax
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
serde_json = "1.0" # Json converter
thiserror = "1.0.48" # define errors type
tokio = { version = "1.33.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt",
] } # Async Executor
tokio-stream = "0.1.14" # Async next() method
tracing = "0.1.40" # Logger

[dev-dependencies]
criterion = { version = "0.5.1", features = [
  "async_futures",
  "async_tokio",
  "html_reports",
] }
once_cell = "1.18.0"
tracing-appender = "0.2"
pretty_assertions = "1.4.0"
tracing-subscriber = "0.3.17"


[[bench]]
name = "convert_n_thread"
harness = false
