[package]
name = "dar2oar_core"
version.workspace = true
description = "DAR to OAR Converter Core"
authors = ["SARDONYX-sard"]
categories.workspace = true
keywords = ["converter", "skyrim"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "1.0.0" # To traverse dir recursivly(Single thiread)
compact_str = { version = "0.7.1", features = ["serde"] }
jwalk = "0.8.1" # To parallel traverse dir recursivly
nom = { version = "7.1.3", features = ["alloc"] } # Syntax
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
serde_json = "1.0" # Json converter
thiserror = "1.0.48" # define errors type
tokio = { version = "1.33.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
] } # Async Executor
tokio-stream = "0.1.14" # Async next() method
tracing = "0.1.40" # Logger

[dev-dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
criterion = { version = "0.5.1", features = [
  "async_futures",
  "async_tokio",
  "html_reports",
] }
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
tracing-appender = "0.2"
tracing-subscriber = "0.3.17"


[[bench]]
name = "convert_n_thread"
harness = false
