[package]
name = "dar2oar"
version = "0.1.0"
description = "A Tauri App"
authors = ["SARDONYX-sard"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SARDONYX-sard/dar2oar"
default-run = "dar2oar"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
# ariadne = "0.3.0"                                   # Reporting error
# const-str = "0.5.6"                                 # Generate const str. More flexible than std
clap = { version = "4.4.4", features = ["derive"] } # For CLI
log = "0.4.20" # Logger
nom = { version = "7.1.3", features = ["alloc"] } # Syntax
serde = { version = "1.0", features = ["derive"] } # Json converter
serde_json = "1.0"
thiserror = "1.0.48" # define errors type
tauri = { version = "1.4.0", features = [
  "shell-open",
  "dialog-open",
  "fs-all",
] } # For GUI
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" } # logger

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
