[package]
name = "g_dar2oar"
version = "0.1.2"
description = "DAR to OAR Converter GUI"
authors = ["SARDONYX-sard"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SARDONYX-sard/dar2oar"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
dar2oar_core = { path = "../dar2oar_core" }
log = "0.4.20" # Logger
tauri = { version = "1.4.0", features = [ "shell-all", "path-all",
  "dialog-open",
  "fs-all",
  "devtools",
] } # For GUI
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" } # logger

[dev-dependencies]
pretty_assertions = "1.4.0"
simple-log = "1.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
