[package]
name = "g_dar2oar"
version.workspace = true
description = "DAR to OAR Converter GUI"
authors = ["SARDONYX-sard"]
categories.workspace = true
keywords = ["converter", "skyrim", "gui"]
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.60"

[package.metadata.dist]
dist = false # To run CI and build separately from CLI (cargo dist)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.31"
dar2oar_core = { path = "../dar2oar_core" }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
tauri = { version = "1.4.0", features = [
  "devtools",
  "dialog-open",
  "fs-all",
  "path-all",
  "shell-all",
] } # For GUI
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
tracing-appender = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
