[package]
name = "dar2oar_core"
version.workspace = true
description = "DAR to OAR Converter Core"
authors.workspace = true
categories.workspace = true
keywords = ["converter", "skyrim"]
readme = "./readme.md"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# default = ["tracing"] # For debug
tracing = ["dep:tracing"]

[dependencies]
async-walkdir = "2.1.0" # To traverse dir recursively(Single thread)
compact_str = { version = "0.9.0", features = ["serde"] }
jwalk = "0.8.1" # To parallel traverse dir recursively
serde = { workspace = true } # Implement (De)Serializer
serde_json = { workspace = true } # Json converter
snafu = { workspace = true } # define errors type
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] } # Async Executor
tokio-stream = "0.1.17" # Async next() method
tracing = { workspace = true, optional = true } # Logger

# workspace members
oar_conditions = { workspace = true }
dar_syntax = { workspace = true }


[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_futures", "async_tokio", "html_reports"] }
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true, features = ["derive"] }
temp-dir = { workspace = true }

[[bench]]
name = "convert_n_thread"
harness = false
