[package]
name = "dar_syntax"
version.workspace = true
description.workspace = true
categories.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["skyrim"]
edition.workspace = true
rust-version.workspace = true


[dependencies]
tracing = { workspace = true, optional = true }
winnow = { workspace = true } # Parser combinator

quick_tracing = { workspace = true, optional = true } # For Debug

# workspace members
oar_values = { workspace = true }
winnow_ext = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
# default = ["tracing"] # For debug
tracing = ["dep:tracing", "dep:quick_tracing"]


[lints]
workspace = true
