[package]
name = "mapping_table"
version.workspace = true
description.workspace = true
categories.workspace = true
keywords = ["skyrim"]
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
jwalk = { workspace = true } # To parallel traverse dir recursively
serde = { workspace = true, features = ["derive"], optional = true }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
winnow = { workspace = true }

# workspace members
winnow_ext = { workspace = true }


[features]
default = []
tracing = ["dep:tracing"]
serde = ["dep:serde"]


[lints]
workspace = true
