[package]
name = "oar_conditions"
version.workspace = true
description.workspace = true
categories.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
rayon = { version = "1.11.0" }
serde = { workspace = true } # Implement (De)Serializer
snafu = { workspace = true } # define errors type
tracing = { workspace = true, optional = true } # Logger

# workspace members
oar_values = { workspace = true }
dar_syntax = { workspace = true }


[dev-dependencies]
serde_json = { workspace = true } # Json converter
pretty_assertions = { workspace = true }


[lints]
workspace = true
