[package]
name = "tracing_rotation"
version = "0.1.0"
description = "Rotation file tracing global subscriber"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["tracing"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.44"
once_cell = { workspace = true }
snafu = { workspace = true }              # Implement error types
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
temp-dir = "0.2.0"
pretty_assertions = { workspace = true }

[lints]
workspace = true
